--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,9 +1,18 @@
 // Fonts
 @import url('https://fonts.googleapis.com/css?family=Nunito');
 
+// font awesome
+@import "~@fortawesome/fontawesome-free/scss/fontawesome";
+@import "~@fortawesome/fontawesome-free/scss/regular";
+@import "~@fortawesome/fontawesome-free/scss/solid";
+@import "~@fortawesome/fontawesome-free/scss/brands";
+
+
 // Variables
 @import 'variables';
 
 // Bootstrap
 // @import '~bootstrap/scss/bootstrap';
+
 @import '~mdb-ui-kit/css/mdb.min.css';
+
